--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,4 +41,7 @@
     @apply h-0.5 w-7/12 mt-5 mb-5 bg-white rounded-lg opacity-50;
   }
 
+  .profile-box{
+    @apply flex flex-row w-2/5 rounded-md bg-darkbackgroundshade dark:bg-lightbackgroundshade
+  }
 }
